--- a/Nachhilfe/angular.json
+++ b/Nachhilfe/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2aa90d60-deb5-488a-a2f8-845ff0736f54"
   }
 }
